--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual Store</title>
+    <title>Vintage Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -114,15 +114,15 @@
                 </button>
                 
                 <nav class="nav-buttons" id="navButtons">
-                    <a href="#" class="btn" onclick="goBack()">
+                    <a href="https://lafilec.github.io/LAFILec/" class="btn" onclick="goBack()">
                         <div class="icon icon-back"></div>
                         <span class="btn-text">RETORNAR</span>
                     </a>
-                    <a href="#" class="btn" onclick="openNewTab('crowdfunding')">
+                    <a href="https://lafilec.github.io/crowdfunding/" class="btn" onclick="openNewTab('crowdfunding')">
                         <div class="icon icon-crowd"></div>
                         <span class="btn-text">CROWDFUNDING</span>
                     </a>
-                    <a href="#" class="btn" onclick="openNewTab('instagram')">
+                    <a href="https://www.instagram.com/lafil.ec/?igsh=MTc1MzY4MjdsYXZhYg%3D%3D" class="btn" onclick="openNewTab('instagram')">
                         <div class="icon icon-instagram"></div>
                         <span class="btn-text">INSTAGRAM</span>
                     </a>
@@ -192,7 +192,7 @@
                                 <span>1. Click en ABRIR ENLACE</span>
                                 <span>2. Copia la URL</span>
                                 <span>3. Comparte con tu amigo</span>
-                                <span>4. ¡Disfruten juntos!</span>
+                                <span>4. ¡A disfrutar!</span>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                     </p>
                     <button class="download-btn" onclick="downloadFile('feliz dia.html')">
                         <div class="btn-icon">⬇</div>
-                        DESCARGAR HTML
+                        DESCARGAR
                     </button>
                 </div>
 
@@ -239,7 +239,7 @@
                     </p>
                     <button class="download-btn" onclick="downloadFile('rose.html')">
                         <div class="btn-icon">⬇</div>
-                        DESCARGAR HTML
+                        DESCARGAR
                     </button>
                 </div>
 
@@ -254,7 +254,7 @@
                     </p>
                     <button class="download-btn" onclick="downloadFile('sombras.html')">
                         <div class="btn-icon">⬇</div>
-                        DESCARGAR HTML
+                        DESCARGAR
                     </button>
                 </div>
 
@@ -301,7 +301,7 @@
                     <h3 class="product-title">PRODUCTOS PERSONALIZADOS</h3>
                     <p class="product-description">
                         ¿Tienes una idea específica? Creamos productos únicos 
-                        adaptados a tus necesidades y visión retro-futurista.
+                        adaptados a tus necesidades y visión.
                     </p>
                     <button class="customize-btn" onclick="openCustomModal()">
                         <div class="btn-icon">✨</div>
@@ -320,7 +320,7 @@
             </div>
             <h3>PRODUCTOS PERSONALIZADOS</h3>
             <div class="modal-body">
-                <p>Ofrecemos productos completamente personalizados para satisfacer tus necesidades específicas.</p>
+                <p>Ofrecemos productos completamente personalizados adaptandolos a tus necesidades específicas.</p>
                 <div class="contact-info">
                     <p>Para más información y cotización de precios, contáctate con:</p>
                     <p class="contact-name">Erick</p>
@@ -331,7 +331,12 @@
                         </a>
                     </div>
                 </div>
-                <p>Juntos crearemos algo único con estética retro-futurista que supere tus expectativas.</p>
+                <p>Rango de precios:</p>
+                <p>Archivos descargables: $3 - $6
+                <p>Enlaces: $5 - $10</p>
+                <p>Recuerda que son precios referenciales y todo depende del timepo, complejidad y recursos utilizados.</p>
+                <p>Juntos podemos crear algo único que supere tus expectativas.</p>
+                </p>
                 <div class="modal-pixels">
                     <div class="modal-pixel"></div>
                     <div class="modal-pixel"></div>
@@ -348,7 +353,7 @@
                 <div class="footer-pixel"></div>
                 <div class="footer-pixel"></div>
             </div>
-            <p>© 2025 - TODOS LOS DERECHOS RESERVADOS</p>
+            <p>© 2025 La Fil. Todos los derechos reservados.</p>
         </div>
     </footer>
 
