--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                         <div class="icon icon-back"></div>
                         <span class="btn-text">RETORNAR</span>
                     </a>
-                    <a href="https://lafilec.github.io/crowdfunding/" class="btn" onclick="openNewTab('crowdfunding')">
+                    <a href="https://lafilec.github.io/crowdfunding/" class="btn" target="_blank" rel="noopener noreferrer">
                         <div class="icon icon-crowd"></div>
                         <span class="btn-text">CROWDFUNDING</span>
                     </a>
-                    <a href="https://www.instagram.com/lafil.ec/?igsh=MTc1MzY4MjdsYXZhYg%3D%3D" class="btn" onclick="openNewTab('instagram')">
+                    <a href="https://www.instagram.com/lafil.ec/?igsh=MTc1MzY4MjdsYXZhYg%3D%3D" class="btn" target="_blank" rel="noopener noreferrer">
                         <div class="icon icon-instagram"></div>
                         <span class="btn-text">INSTAGRAM</span>
                     </a>
